# paperal-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  render.yaml  requirements.txt
helpers/: gemini_helper.py
helpers/search/: sonar_helper.py
src/: generate.py  introduction.py  relavance.py  run.py  run_worker.py
src/api/: __init__.py  celery_app.py  hatchet_task.py  helix_db.py  main.py
src/api/routes/: adapt.py  generate.py  introduction.py  ocr.py  process.py  search.py  topic.py
src/api/tasks/: __init__.py  process_urls_task.py
src/graph/: __init__.py  graph_retriever.py  main.py  rag.py  vector_search.py
src/graph/db/: schema.py
src/helix/: config.hx.json  queries.hx  schema.hx
src/helpers/: __init__.py  db.py  gemini_helper.py  ocr_helper.py  store_pinecone.py
src/helpers/managers/: pinecone_manager.py  supabase_manager.py
src/helpers/search/: scholar_helper.py  sonar_helper.py  tavily_helper.py
src/models/: __init__.py  agent.py  library.py  request.py  response.py
src/my_crew/: crew.py  main.py
src/my_crew/config/: agents.yaml  tasks.yaml
src/my_crew/flows/: find_papers.py  find_papers_flow.py
src/my_crew/tools/: ocr_tool.py  tavily_search_tool.py
src/sample/: langchain_chunks.json
src/sample/helix/: origin_node.json  origin_nodes.json
src/sample/local/: citations.json  extract_citations_with_context.json  process_paper_citations.json
src/utils/: __init__.py  adapt_gpt.py  chunking.py  dspy_test.py  langchain_chunking.py  matching.py  ocr.py  scholar_search.py  scrapers.py  tavily_search.py  text.py
src/utils/mlruns/0/: meta.yaml
src/utils/mlruns/655754274851622515/: meta.yaml
utils/: text.py
