[project]
name = "paperal_backend"
version = "0.1.0"
description = "Paperal Backend"
authors = [{ name = "Dhruv Bansal", email = "dhruv@paperal.ai" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chunkr-ai>=0.0.49",
    "fastapi>=0.115.12",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "langgraph>=0.4.2",
    "mistralai>=1.7.0",
    "pinecone[grpc]>=6.0.2",
    "playwright>=1.52.0",
    "supabase>=2.15.1",
    "tavily-python>=0.7.2",
    "uvicorn>=0.34.2",
]