[project]
name = "paperal_backend"
version = "0.1.0"
description = "Paperal Backend"
authors = [{ name = "Dhruv Bansal", email = "dhruv@paperal.ai" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "celery[redis]>=5.5.2",
    "chunkr-ai>=0.0.49",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.2",
    "pinecone[grpc]>=6.0.2",
    "redis>=5.3.0",
    "supabase>=2.15.1",
    "tavily-python>=0.7.2",
    "uvicorn>=0.34.2",
]
